--- a/src/main/resources/properties/connection.properties
+++ b/src/main/resources/properties/connection.properties
@@ -1,14 +1,13 @@
-space.uri=http://soap.router.aston.com/
 team.space.uri=http://endpoints.teamservice.com/
-
-
-
 team.url=http://localhost:8085/test/service/router
 
-team.action.creategroup=http://endpoints.teamservice.com/RouterService/createGroupRequest
-team.action.createGroup=RouterWebServiceSoap/createGroup
-team.action.createUser=RouterWebServiceSoap/createUser
-team.action.usersNotInGroup=RouterWebServiceSoap/usersNotInGroup
-team.action.addUser=RouterWebServiceSoap/addUser
-team.action.removeByTeamLeadId=RouterWebServiceSoap/removeByTeamLeadId
+team.action.createGroup=http://endpoints.teamservice.com/RouterService/createGroupRequest
+team.action.createUser=http://endpoints.teamservice.com/RouterService/createUser
+team.action.usersNotInGroup=http://endpoints.teamservice.com/RouterService/usersNotInGroupResponse
+team.action.addUser=http://endpoints.teamservice.com/RouterService/addUser
+team.action.removeByTeamLeadId=http://endpoints.teamservice.com/RouterService/removeByTeamLeadId
+team.action.getGroupByByUserId=http://endpoints.teamservice.com/RouterService/getGroupIdByTeamleadIdResponse
+team.action.usersNotTeamleads=http://endpoints.teamservice.com/RouterService/notTeamleads
+
+
 
