--- a/src/main/resources/properties/connection.properties
+++ b/src/main/resources/properties/connection.properties
@@ -1,5 +1,5 @@
 team.space.uri=http://endpoints.teamservice.com/
-team.url=http://82.146.35.247:8085/team-service-1.0/service/router?wsdl
+team.url=http://82.146.35.247:8085/team-service-1.0/service/router
 
 team.action.createGroup=http://endpoints.teamservice.com/RouterService/createGroupRequest
 team.action.createUser=http://endpoints.teamservice.com/RouterService/createUser
